updates issue with raster format

--- a/ipynb/vrt-cloud-rasterio-gdal.ipynb
+++ b/ipynb/vrt-cloud-rasterio-gdal.ipynb
@@ -30,7 +30,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GDAL 3.6.3, released 2023/03/07\r\n"
+      "GDAL 3.6.3, released 2023/03/07\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -81,13 +81,13 @@
      "text": [
       "Your browser has been opened to visit:\n",
       "\n",
-      "    https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=32555940559.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8085%2F&scope=openid+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcloud-platform+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fappengine.admin+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fsqlservice.login+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcompute+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Faccounts.reauth&state=N2yXNN0EVlk6RW737o1nObO6SXEW7H&access_type=offline&code_challenge=0JDRVOqb2QvIsjjkLtc-iXHastzzzm3w9zw2noSPQkI&code_challenge_method=S256\n",
+      "    https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=32555940559.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8085%2F&scope=openid+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcloud-platform+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fappengine.admin+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fsqlservice.login+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcompute+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Faccounts.reauth&state=mYPQ3hyT7RCvpIPmkfq41j8FTvxvDq&access_type=offline&code_challenge=7_6J6-N7bY3Z4sZ1Tqfz5iC0ll_tLOPWl2zYkUu7bfY&code_challenge_method=S256\n",
       "\n",
       "\n",
       "Application default credentials (ADC) were updated.\n",
       "\n",
       "You are now logged in as [cnilsen@gmail.com].\n",
-      "Your current project is [swhm-prod].  You can change this setting by running:\n",
+      "Your current project is [swhm-dev].  You can change this setting by running:\n",
       "  $ gcloud config set project PROJECT_ID\n"
      ]
     }
@@ -98,14 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Updated property [core/project].\r\n"
+      "Updated property [core/project].\n"
      ]
     }
    ],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
     "        if filename.endswith(\".tif\"):\n",
     "            input_path = os.path.join(directory_path, filename)\n",
     "            output_path = os.path.join(\"tmp\", filename)\n",
-    "            cmd = f'gdalwarp -t_srs {target_crs} -ot Byte -overwrite {input_path} {output_path} -co NUM_THREADS=ALL_CPUS -co COMPRESS=LZW -co BIGTIFF=YES'\n",
+    "            cmd = f'gdalwarp -t_srs {target_crs} -overwrite {input_path} {output_path} -co NUM_THREADS=ALL_CPUS -co COMPRESS=LZW -co BIGTIFF=YES'\n",
     "            !{cmd}\n",
     "            \n",
     "            #make a list of the files in the directory \n",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,6 +309,95 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "lay_name = \"Runoff_mm\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Making VRT...\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "VRT Complete!\n"
+     ]
+    }
+   ],
+   "source": [
+    "makevrt(lay_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Making COG..\n",
+      "Input file size is 73740, 70537\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "COG Complete!\n"
+     ]
+    }
+   ],
+   "source": [
+    "makecog()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uploading Layer...\n",
+      "Copying file://cog.tif [Content-Type=image/tiff]...\n",
+      "==> NOTE: You are uploading one or more large file(s), which would run          \n",
+      "significantly faster if you enable parallel composite uploads. This\n",
+      "feature can be enabled by editing the\n",
+      "\"parallel_composite_upload_threshold\" value in your .boto\n",
+      "configuration file. However, note that if you do this large files will\n",
+      "be uploaded as `composite objects\n",
+      "<https://cloud.google.com/storage/docs/composite-objects>`_,which\n",
+      "means that any user who downloads such objects will need to have a\n",
+      "compiled crcmod installed (see \"gsutil help crcmod\"). This is because\n",
+      "without a compiled crcmod, computing checksums on composite objects is\n",
+      "so slow that gsutil disables downloads of composite objects.\n",
+      "\n",
+      "/ [1 files][  5.8 GiB/  5.8 GiB]  657.1 KiB/s                                   \n",
+      "Operation completed over 1 objects/5.8 GiB.                                      \n",
+      "Layer upload complete!\n"
+     ]
+    }
+   ],
+   "source": [
+    "ul(lay_name)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -319,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,11 +418,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -478,7 +564,7 @@
        "14  Runoff_mm/Runoff_mm0000046592-0000093184.tif  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,11 +578,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -504,9 +587,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/yn/15903z7124l3th5fm7wg0lgw0000gn/T/ipykernel_16623/3619429793.py:1: FutureWarning: In a future version of pandas all arguments of StringMethods.split except for the argument 'pat' will be keyword-only.\n",
+      "/var/folders/yn/15903z7124l3th5fm7wg0lgw0000gn/T/ipykernel_68059/3619429793.py:1: FutureWarning: In a future version of pandas all arguments of StringMethods.split except for the argument 'pat' will be keyword-only.\n",
       "  lay_names= df['file_path'].str.split('/', 0).str[0]#.str.replace('/','',regex=False)\n",
-      "/var/folders/yn/15903z7124l3th5fm7wg0lgw0000gn/T/ipykernel_16623/3619429793.py:2: FutureWarning: In a future version of pandas all arguments of StringMethods.split except for the argument 'pat' will be keyword-only.\n",
+      "/var/folders/yn/15903z7124l3th5fm7wg0lgw0000gn/T/ipykernel_68059/3619429793.py:2: FutureWarning: In a future version of pandas all arguments of StringMethods.split except for the argument 'pat' will be keyword-only.\n",
       "  df['layer_name'] = lay_names.str.split('/',1).str[0]\n"
      ]
     },
@@ -667,7 +750,7 @@
        "14  Runoff_mm/Runoff_mm0000046592-0000093184.tif  Runoff_mm  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +773,7 @@
        "array(['Runoff_mm'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -711,27 +794,27 @@
      "text": [
       "If you experience problems with multiprocessing on MacOS, they might be related to https://bugs.python.org/issue33725. You can disable multiprocessing by editing your .boto config or by adding the following flag to your command: `-o \"GSUtil:parallel_process_count=1\"`. Note that multithreading is still available even if you disable multiprocessing.\n",
       "\n",
+      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000000000-0000069888.tif...\n",
+      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000000000-0000023296.tif...\n",
       "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000000000-0000000000.tif...\n",
-      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000000000-0000023296.tif... \n",
+      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000000000-0000046592.tif... \n",
+      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000000000-0000093184.tif... \n",
       "==> NOTE: You are downloading one or more large file(s), which would            \n",
       "run significantly faster if you enabled sliced object downloads. This\n",
       "feature is enabled by default but requires that compiled crcmod be\n",
       "installed (see \"gsutil help crcmod\").\n",
       "\n",
       "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000023296-0000000000.tif...\n",
-      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000000000-0000046592.tif... \n",
-      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000000000-0000069888.tif... \n",
-      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000023296-0000046592.tif... \n",
-      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000023296-0000069888.tif... \n",
-      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000000000-0000093184.tif... \n",
-      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000046592-0000023296.tif... \n",
       "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000023296-0000023296.tif... \n",
-      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000046592-0000046592.tif... \n",
-      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000046592-0000069888.tif... \n",
-      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000046592-0000093184.tif... \n",
-      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000046592-0000000000.tif...\n",
+      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000023296-0000046592.tif...\n",
+      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000023296-0000069888.tif... \n",
+      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000046592-0000023296.tif... \n",
       "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000023296-0000093184.tif... \n",
-      "| [15/15 files][  4.6 GiB/  4.6 GiB] 100% Done  19.7 MiB/s ETA 00:00:00         \n",
+      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000046592-0000000000.tif... \n",
+      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000046592-0000069888.tif...\n",
+      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000046592-0000093184.tif... \n",
+      "Copying gs://swhm-image-exports/Runoff_mm/Runoff_mm0000046592-0000046592.tif...\n",
+      "\\ [15/15 files][  4.6 GiB/  4.6 GiB] 100% Done  16.6 MiB/s ETA 00:00:00         \n",
       "Operation completed over 15 objects/4.6 GiB.                                     \n",
       "Creating output file that is 18384P x 27340L.\n",
       "Processing Runoff_mm/Runoff_mm0000023296-0000046592.tif [1/1] : 0...10...20...30...40...50...60...70...80...90...100 - done.\n",
@@ -764,16 +847,31 @@
       "Creating output file that is 949P x 14010L.\n",
       "Processing Runoff_mm/Runoff_mm0000046592-0000093184.tif [1/1] : 0...10...20...30...40...50...60...70...80...90...100 - done.\n",
       "Making VRT...\n",
-      "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "0...10Warning 1: gdalbuildvrt does not support heterogeneous band data type: expected Byte, got Float64. Skipping tmp/Runoff_mm0000023296-0000046592.tif\n",
+      "...Warning 1: gdalbuildvrt does not support heterogeneous band data type: expected Byte, got Float64. Skipping tmp/Runoff_mm0000023296-0000093184.tif\n",
+      "20Warning 1: gdalbuildvrt does not support heterogeneous band data type: expected Byte, got Float64. Skipping tmp/Runoff_mm0000023296-0000023296.tif\n",
+      ".Warning 1: gdalbuildvrt does not support heterogeneous band data type: expected Byte, got Float64. Skipping tmp/Runoff_mm0000000000-0000000000.tif\n",
+      "..30..Warning 1: gdalbuildvrt does not support heterogeneous band data type: expected Byte, got Float64. Skipping tmp/Runoff_mm0000000000-0000046592.tif\n",
+      ".Warning 1: gdalbuildvrt does not support heterogeneous band data type: expected Byte, got Float64. Skipping tmp/Runoff_mm0000000000-0000093184.tif\n",
+      "40..Warning 1: gdalbuildvrt does not support heterogeneous band data type: expected Byte, got Float64. Skipping tmp/Runoff_mm0000023296-0000000000.tif\n",
+      "Warning 1: gdalbuildvrt does not support heterogeneous band data type: expected Byte, got Float64. Skipping tmp/Runoff_mm0000000000-0000023296.tif\n",
+      ".Warning 1: gdalbuildvrt does not support heterogeneous band data type: expected Byte, got Float64. Skipping tmp/Runoff_mm0000046592-0000069888.tif\n",
+      "50...60.Warning 1: gdalbuildvrt does not support heterogeneous band data type: expected Byte, got Float64. Skipping tmp/Runoff_mm0000046592-0000000000.tif\n",
+      ".Warning 1: gdalbuildvrt does not support heterogeneous band data type: expected Byte, got Float64. Skipping tmp/Runoff_mm0000023296-0000069888.tif\n",
+      ".70...80..Warning 1: gdalbuildvrt does not support heterogeneous band data type: expected Byte, got Float64. Skipping tmp/Runoff_mm0000046592-0000023296.tif\n",
+      ".90Warning 1: gdalbuildvrt does not support heterogeneous band data type: expected Byte, got Float64. Skipping tmp/Runoff_mm0000000000-0000069888.tif\n",
+      ".Warning 1: gdalbuildvrt does not support heterogeneous band data type: expected Byte, got Float64. Skipping tmp/Runoff_mm0000046592-0000046592.tif\n",
+      "..100 - done.\n",
+      "Warning 1: gdalbuildvrt does not support heterogeneous band data type: expected Byte, got Float64. Skipping tmp/Runoff_mm0000046592-0000093184.tif\n",
       "VRT Complete!\n",
       "Making COG..\n",
-      "Input file size is 77889, 74506\n",
+      "Input file size is 77433, 66725\n",
       "0...10...20...30...40...50...60...70...80...90...100 - done.\n",
       "COG Complete!\n",
       "Uploading Layer...\n",
       "Copying file://cog.tif [Content-Type=image/tiff]...\n",
-      "\\ [1 files][127.7 MiB/127.7 MiB]  665.9 KiB/s                                   \n",
-      "Operation completed over 1 objects/127.7 MiB.                                    \n",
+      "| [1 files][ 73.9 MiB/ 73.9 MiB]  522.3 KiB/s                                   \n",
+      "Operation completed over 1 objects/73.9 MiB.                                     \n",
       "Layer upload complete!\n"
      ]
     }
