--- a/ipynb/Earth_Engine_table_from_cloud_storage.ipynb
+++ b/ipynb/Earth_Engine_table_from_cloud_storage.ipynb
@@ -1,41 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "fSIfBsgi8dNK"
-   },
-   "outputs": [],
-   "source": [
-    "#@title Copyright 2022 Google LLC. { display-mode: \"form\" }\n",
-    "# Licensed under the Apache License, Version 2.0 (the \"License\");\n",
-    "# you may not use this file except in compliance with the License.\n",
-    "# You may obtain a copy of the License at\n",
-    "#\n",
-    "# https://www.apache.org/licenses/LICENSE-2.0\n",
-    "#\n",
-    "# Unless required by applicable law or agreed to in writing, software\n",
-    "# distributed under the License is distributed on an \"AS IS\" BASIS,\n",
-    "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
-    "# See the License for the specific language governing permissions and\n",
-    "# limitations under the License."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "aV1xZ1CPi3Nw"
-   },
-   "source": [
-    "<table class=\"ee-notebook-buttons\" align=\"left\"><td>\n",
-    "<a target=\"_blank\"  href=\"http://colab.research.google.com/github/google/earthengine-api/blob/master/python/examples/ipynb/Earth_Engine_asset_from_cloud_geotiff.ipynb\">\n",
-    "    <img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" /> Run in Google Colab</a>\n",
-    "</td><td>\n",
-    "<a target=\"_blank\"  href=\"https://github.com/google/earthengine-api/blob/master/python/examples/ipynb/Earth_Engine_asset_from_cloud_geotiff.ipynb\"><img width=32px src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" /> View source on GitHub</a></td></table>"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "CrEM35gqHouU"
@@ -69,29 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "id": "qVu8GhINwYfO"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching credentials using gcloud\n",
-      "Your browser has been opened to visit:\n",
-      "\n",
-      "    https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=517222506229-vsmmajv00ul0bs7p89v5m89qs8eb9359.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8085%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fearthengine+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdevstorage.full_control+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Faccounts.reauth&state=XP5sIirtvsC3o2JrYSyzjEZkXDlD8t&access_type=offline&code_challenge=KowuvQeZJ9gotoxTesZxh82ofXfB9FhEl2Z-zXlUV54&code_challenge_method=S256\n",
-      "\n",
-      "\n",
-      "Credentials saved to file: [/Users/christiannilsen/.config/gcloud/application_default_credentials.json]\n",
-      "\n",
-      "These credentials will be used by any library that requests Application Default Credentials (ADC).\n",
-      "\n",
-      "Successfully saved authorization token.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ee\n",
     "from google.auth.transport.requests import AuthorizedSession\n",
@@ -105,13 +52,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get image information from gcp\n",
-    "Get list of images and their respective uris from the gcp data bucket\n"
+    "## Get table information from gcp\n",
+    "Get list of tables and their respective uris from the gcp data bucket\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,59 +104,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>blob_name</th>\n",
-       "      <th>uri</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>cocs/nhdplus/nhdplus000000000000.csv</td>\n",
-       "      <td>gs://swhm-bq-exports/cocs/nhdplus/nhdplus00000...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                              blob_name  \\\n",
-       "0  cocs/nhdplus/nhdplus000000000000.csv   \n",
-       "\n",
-       "                                                 uri  \n",
-       "0  gs://swhm-bq-exports/cocs/nhdplus/nhdplus00000...  "
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.DataFrame(blobsout, columns=['blob_name'])\n",
     "df['uri'] = 'gs://'+BUCKET_NAME+'/'+df['blob_name']\n",
@@ -218,59 +117,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>blob_name</th>\n",
-       "      <th>uri</th>\n",
-       "      <th>asset_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>cocs/nhdplus/nhdplus000000000000.csv</td>\n",
-       "      <td>gs://swhm-bq-exports/cocs/nhdplus/nhdplus00000...</td>\n",
-       "      <td>nhdplus</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                              blob_name  \\\n",
-       "0  cocs/nhdplus/nhdplus000000000000.csv   \n",
-       "\n",
-       "                                                 uri asset_name  \n",
-       "0  gs://swhm-bq-exports/cocs/nhdplus/nhdplus00000...    nhdplus  "
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "file_names = [os.path.splitext(os.path.basename(file_path))[0] for file_path in df['blob_name']]\n",
@@ -281,17 +130,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Started upload task with ID: GYQAXWNJZ2LPGKJI4HGSWUO5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "asset_name = df['asset_name'][0]\n",
     "uri = df['uri'][0]\n",
